Fixed delete modal button container's margin-bottom spacing

--- a/src/components/InventoryDeleteModal/InventoryDeleteModal.scss
+++ b/src/components/InventoryDeleteModal/InventoryDeleteModal.scss
@@ -80,6 +80,10 @@
     @include for-tablet {
       margin-top: 0;
     }
+
+    &--small {
+      font-size: toRem(22.5); 
+    }
   }
 
   &__txt {
